--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@
     renderHeart(document.getElementById('pinkboard'), '#ff66cc');
   </script>
   <script>
-	function bodyPlayMusic() {
-       audio.play();
+    function bodyPlayMusic() {
+      var audio = document.getElementById('audio');
+      audio.play();
     };
   </script>
   <script>
